// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Plan/> should render a custom plan 1`] = `
<div
  class="plan plan-Custom comparaisonMode card"
>
  <div
    class="plan-header card-header"
  >
    <div
      class="plan-badge"
    />
    <div
      class="header-text"
    >
      <strong>
        Custom
      </strong>
      <span
        class="float-right"
      >
        54000
         /
         
        mo
      </span>
    </div>
  </div>
  <div
    class="card-body"
  >
    <ul>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          playlist_add_check
        </i>
        <strong>
          2000 tickets included
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          playlist_add
        </i>
        <strong>
          $23.00 per 100 extra tickets
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          facebook
        </i>
        <strong>
          Facebook integration
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="feature-icon icon-custom mr-3 icon-instagram"
        />
        <strong>
          Instagram integration
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          widgets
        </i>
        <strong>
          Magento integration
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          widgets
        </i>
        <strong>
          Phone integration
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          insert_emoticon
        </i>
        <strong>
          Satisfaction surveys
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          chat
        </i>
        <strong>
          Chat campaigns
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          lock
        </i>
        <strong>
          User permissions
        </strong>
      </li>
    </ul>
  </div>
  <div
    class="card-footer"
  >
    <button
      class="btn btn-link"
      data-testid="choose-plan-button"
      type="button"
    >
      Upgrade to Custom Plan
    </button>
  </div>
</div>
`;

exports[`<Plan/> should render a plan being selected 1`] = `
<div
  class="plan plan-Basic comparaisonMode card"
>
  <div
    class="plan-header card-header"
  >
    <div
      class="plan-badge"
    />
    <div
      class="header-text"
    >
      <strong>
        Basic
      </strong>
      <span
        class="float-right"
      >
        6000
         /
         
        mo
      </span>
    </div>
  </div>
  <div
    class="card-body"
  >
    <ul>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          playlist_add_check
        </i>
        <strong>
          350 tickets included
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          playlist_add
        </i>
        <strong>
          $25.00 per 100 extra tickets
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          all_inclusive
        </i>
        <strong>
          Unlimited users
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          extension
        </i>
        <strong>
          150 integrations included
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          widgets
        </i>
        <strong>
          Shopify integration
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          chat
        </i>
        <strong>
          Live chat
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          build
        </i>
        <strong>
          Macros and rules
        </strong>
      </li>
    </ul>
  </div>
  <div
    class="card-footer"
  >
    <button
      class="btn-loading btn btn-link disabled"
      data-testid="choose-plan-button"
      disabled=""
      type="button"
    >
      Upgrade to Basic Plan
    </button>
  </div>
</div>
`;

exports[`<Plan/> should render a plan featured 1`] = `
<div
  class="plan plan-Basic featured comparaisonMode card"
>
  <div
    class="plan-header featured-header card-header"
  >
    <div
      class="plan-badge"
    />
    <div
      class="featured-header-title"
    >
      Most Popular
    </div>
    <div
      class="header-text"
    >
      <strong>
        Basic
      </strong>
      <span
        class="float-right"
      >
        6000
         /
         
        mo
      </span>
    </div>
  </div>
  <div
    class="card-body"
  >
    <ul>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          playlist_add_check
        </i>
        <strong>
          350 tickets included
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          playlist_add
        </i>
        <strong>
          $25.00 per 100 extra tickets
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          all_inclusive
        </i>
        <strong>
          Unlimited users
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          extension
        </i>
        <strong>
          150 integrations included
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          widgets
        </i>
        <strong>
          Shopify integration
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          chat
        </i>
        <strong>
          Live chat
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          build
        </i>
        <strong>
          Macros and rules
        </strong>
      </li>
    </ul>
  </div>
  <div
    class="card-footer"
  >
    <button
      class="btn btn-link"
      data-testid="choose-plan-button"
      type="button"
    >
      Upgrade to Basic Plan
    </button>
  </div>
</div>
`;

exports[`<Plan/> should render a plan with a cheaper plan 1`] = `
<div
  class="plan plan-Pro comparaisonMode card"
>
  <div
    class="plan-header card-header"
  >
    <div
      class="plan-badge"
    />
    <div
      class="header-text"
    >
      <strong>
        Pro
      </strong>
      <span
        class="float-right"
      >
        30000
         /
         
        mo
      </span>
    </div>
  </div>
  <div
    class="card-body"
  >
    <b>
      Everything from 
      Basic
       plus...
    </b>
    <ul>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          playlist_add_check
        </i>
        <strong>
          2000 tickets included
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          playlist_add
        </i>
        <strong>
          $23.00 per 100 extra tickets
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          facebook
        </i>
        <strong>
          Facebook integration
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="feature-icon icon-custom mr-3 icon-instagram"
        />
        <strong>
          Instagram integration
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          widgets
        </i>
        <strong>
          Magento integration
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          widgets
        </i>
        <strong>
          Phone integration
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          insert_emoticon
        </i>
        <strong>
          Satisfaction surveys
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          chat
        </i>
        <strong>
          Chat campaigns
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          lock
        </i>
        <strong>
          User permissions
        </strong>
      </li>
    </ul>
  </div>
  <div
    class="card-footer"
  >
    <button
      class="btn btn-link"
      data-testid="choose-plan-button"
      type="button"
    >
      Upgrade to Pro Plan
    </button>
  </div>
</div>
`;

exports[`<Plan/> should render a plan with custom class names 1`] = `
<div
  class="plan plan-Basic custom-classname comparaisonMode card"
>
  <div
    class="plan-header card-header"
  >
    <div
      class="plan-badge"
    />
    <div
      class="header-text"
    >
      <strong>
        Basic
      </strong>
      <span
        class="float-right"
      >
        6000
         /
         
        mo
      </span>
    </div>
  </div>
  <div
    class="card-body"
  >
    <ul>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          playlist_add_check
        </i>
        <strong>
          350 tickets included
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          playlist_add
        </i>
        <strong>
          $25.00 per 100 extra tickets
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          all_inclusive
        </i>
        <strong>
          Unlimited users
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          extension
        </i>
        <strong>
          150 integrations included
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          widgets
        </i>
        <strong>
          Shopify integration
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          chat
        </i>
        <strong>
          Live chat
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          build
        </i>
        <strong>
          Macros and rules
        </strong>
      </li>
    </ul>
  </div>
  <div
    class="card-footer"
  >
    <button
      class="btn btn-link"
      data-testid="choose-plan-button"
      type="button"
    >
      Upgrade to Basic Plan
    </button>
  </div>
</div>
`;

exports[`<Plan/> should render a plan without comparaison mode 1`] = `
<div
  class="plan plan-Basic card"
>
  <div
    class="plan-header card-header"
  >
    <div
      class="plan-badge"
    />
    <div
      class="header-text"
    >
      <strong>
        Basic
      </strong>
      <span
        class="float-right"
      >
        6000
         /
         
        mo
      </span>
    </div>
  </div>
  <div
    class="card-body"
  >
    <ul>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          playlist_add_check
        </i>
        <strong>
          350 tickets included
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          playlist_add
        </i>
        <strong>
          $25.00 per 100 extra tickets
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          all_inclusive
        </i>
        <strong>
          Unlimited users
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          extension
        </i>
        <strong>
          150 integrations included
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          widgets
        </i>
        <strong>
          Shopify integration
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          chat
        </i>
        <strong>
          Live chat
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          build
        </i>
        <strong>
          Macros and rules
        </strong>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<Plan/> should render an enterprise plan 1`] = `
<div
  class="plan plan-Enterprise comparaisonMode card"
>
  <div
    class="plan-header card-header"
  >
    <div
      class="plan-badge"
    />
    <div
      class="header-text"
    >
      <strong>
        Enterprise
      </strong>
    </div>
  </div>
  <div
    class="card-body"
  >
    <ul>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          arrow_downward
        </i>
        <strong>
          Discounted prices for volumes of 10.000+ tickets
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          beach_access
        </i>
        <strong>
          Premium support
        </strong>
      </li>
    </ul>
  </div>
  <div
    class="card-footer"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      Contact us
    </button>
  </div>
</div>
`;

exports[`<Plan/> should render the current plan 1`] = `
<div
  class="plan plan-Basic comparaisonMode current card"
>
  <div
    class="plan-header card-header"
  >
    <div
      class="plan-badge"
    />
    <div
      class="header-text"
    >
      <strong>
        Basic
      </strong>
      <span
        class="float-right"
      >
        6000
         /
         
        mo
      </span>
    </div>
  </div>
  <div
    class="card-body"
  >
    <ul>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          playlist_add_check
        </i>
        <strong>
          350 tickets included
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          playlist_add
        </i>
        <strong>
          $25.00 per 100 extra tickets
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          all_inclusive
        </i>
        <strong>
          Unlimited users
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          extension
        </i>
        <strong>
          150 integrations included
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          widgets
        </i>
        <strong>
          Shopify integration
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          chat
        </i>
        <strong>
          Live chat
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          build
        </i>
        <strong>
          Macros and rules
        </strong>
      </li>
    </ul>
  </div>
  <div
    class="card-footer"
  >
    <button
      class="btn btn-link disabled"
      data-testid="choose-plan-button"
      disabled=""
      type="button"
    >
      Current Plan
    </button>
  </div>
</div>
`;

exports[`<Plan/> should render the current plan with legacy features 1`] = `
<div
  class="plan plan-Basic comparaisonMode current legacy card"
>
  <div
    class="plan-header card-header"
  >
    <div
      class="plan-badge"
    >
      <div
        class="d-inline-flex"
      >
        <span
          class="d-inline-flex flex-row badge badge-danger"
        >
          <i
            class="material-icons"
          >
            warning
          </i>
          <div
            class="ml-1"
          >
            LEGACY PLAN
          </div>
        </span>
      </div>
    </div>
    <div
      class="header-text"
    >
      <strong>
        Basic legacy
      </strong>
      <span
        class="float-right"
      >
        6000
         /
         
        mo
      </span>
    </div>
  </div>
  <div
    class="card-body"
  >
    <ul>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          playlist_add_check
        </i>
        <strong>
          350 tickets included
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          playlist_add
        </i>
        <strong>
          $25.00 per 100 extra tickets
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          facebook
        </i>
        <strong>
          Facebook integration
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="feature-icon icon-custom mr-3 icon-instagram"
        />
        <strong>
          Instagram integration
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          widgets
        </i>
        <strong>
          Magento integration
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          widgets
        </i>
        <strong>
          Phone integration
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          chat
        </i>
        <strong>
          Chat campaigns
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          lock
        </i>
        <strong>
          User permissions
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          group
        </i>
        <strong>
          Teams
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          assignment_turned_in
        </i>
        <strong>
          Auto-assignment
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          visibility
        </i>
        <strong>
          View sharing
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          all_inclusive
        </i>
        <strong>
          Unlimited users
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          extension
        </i>
        <strong>
          150 integrations included
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          widgets
        </i>
        <strong>
          Shopify integration
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          chat
        </i>
        <strong>
          Live chat
        </strong>
      </li>
      <li
        class="d-flex align-items-center"
      >
        <i
          class="material-icons feature-icon mr-3"
        >
          build
        </i>
        <strong>
          Macros and rules
        </strong>
      </li>
    </ul>
  </div>
  <div
    class="card-footer"
  >
    <button
      class="btn btn-link disabled"
      data-testid="choose-plan-button"
      disabled=""
      type="button"
    >
      Current Plan
    </button>
  </div>
</div>
`;
